[gd_scene load_steps=44 format=2]

[ext_resource path="res://assets/Fonts_v2/Noto_Sans_SC/NotoSansSC-Regular.otf" type="DynamicFontData" id=1]
[ext_resource path="res://gui_modules/CharacterInfo/SlaveSiblingsModule.gd" type="Script" id=2]
[ext_resource path="res://assets/Themes_v2/UNIVERSAL/NonDecorButtons.tres" type="Theme" id=3]
[ext_resource path="res://assets/Fonts_v2/Noto_Sans_SC/NotoSansSC-Medium.otf" type="DynamicFontData" id=4]
[ext_resource path="res://assets/Textures_v2/CHAR_INFO/panel_charinfo_part.png" type="Texture" id=5]
[ext_resource path="res://assets/Themes_v2/UNIVERSAL/Background.tres" type="StyleBox" id=6]
[ext_resource path="res://gui_modules/CharacterInfo/SlaveDietModule.gd" type="Script" id=7]
[ext_resource path="res://assets/Themes_v2/CHAR_INFO/CHI_SEX_Skills.tres" type="Theme" id=8]
[ext_resource path="res://assets/Textures_v2/Universal/Icons/tick.png" type="Texture" id=9]
[ext_resource path="res://assets/images/gui/gui icons/icon_dlfood.png" type="Texture" id=10]
[ext_resource path="res://assets/images/gui/gui icons/icon_lfood.png" type="Texture" id=11]
[ext_resource path="res://assets/Themes_v2/CHAR_INFO/CHI_Slave_Info.tres" type="Theme" id=12]
[ext_resource path="res://assets/Textures_v2/CHAR_INFO/bar_sexskills_progress.png" type="Texture" id=13]
[ext_resource path="res://assets/Themes_v2/EmptyTexture.tres" type="StyleBox" id=14]
[ext_resource path="res://assets/Themes_v2/UNIVERSAL/VScrollBar.tres" type="Theme" id=15]
[ext_resource path="res://assets/Themes_v2/UNIVERSAL/NonDecorButton_with_Font.tres" type="Theme" id=16]
[ext_resource path="res://assets/Textures_v2/Universal/Icons/tick_chosen.png" type="Texture" id=17]
[ext_resource path="res://assets/images/gui/exclamation.png" type="Texture" id=18]
[ext_resource path="res://assets/Textures_v2/CHAR_INFO/bar_sexskills.png" type="Texture" id=19]
[ext_resource path="res://assets/Fonts_v2/FontThemes/MainMiddle.tres" type="DynamicFont" id=20]
[ext_resource path="res://assets/Textures_v2/icon_question_small.png" type="Texture" id=21]
[ext_resource path="res://assets/Themes_v2/UNIVERSAL/NS_36.tres" type="DynamicFont" id=22]
[ext_resource path="res://assets/Themes_v2/UNIVERSAL/NS_30.tres" type="DynamicFont" id=23]
[ext_resource path="res://assets/images/portraits/aire_prt.png" type="Texture" id=24]
[ext_resource path="res://gui_modules/CharacterInfo/RelativesPanel.gd" type="Script" id=25]
[ext_resource path="res://assets/Themes_v2/UNIVERSAL/ButtonTextOnly.tres" type="Theme" id=26]
[ext_resource path="res://gui_modules/CharacterInfo/LUpgradesList.tscn" type="PackedScene" id=27]
[ext_resource path="res://assets/Textures_v2/MAIN_MENU/Buttons/button_mods.png" type="Texture" id=28]
[ext_resource path="res://assets/Textures_v2/MAIN_MENU/Buttons/button_mods_pressed.png" type="Texture" id=29]
[ext_resource path="res://assets/Textures_v2/MAIN_MENU/Buttons/button_mods_hover.png" type="Texture" id=30]
[ext_resource path="res://assets/Themes_v2/UNIVERSAL/PT_30.tres" type="DynamicFont" id=31]
[ext_resource path="res://assets/Textures_v2/CHAR_INFO/loyalty/frame_skilltree.png" type="Texture" id=32]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 5 )
region_rect = Rect2( 0, 0, 1670, 920 )

[sub_resource type="StyleBoxTexture" id=2]

[sub_resource type="DynamicFont" id=3]
size = 36
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 22
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 15
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=6]
size = 36
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxTexture" id=7]

[sub_resource type="StyleBoxTexture" id=8]

[sub_resource type="StyleBoxTexture" id=9]

[sub_resource type="DynamicFont" id=10]
size = 24
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=11]
size = 24
use_filter = true
font_data = ExtResource( 1 )

[node name="SlaveSiblingsModule" type="Panel"]
light_mask = 0
margin_right = 1670.0
margin_bottom = 920.0
theme = ExtResource( 12 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 2 )

[node name="SlaveDietModule" type="Panel" parent="."]
show_behind_parent = true
margin_left = 307.0
margin_top = 346.0
margin_right = 817.0
margin_bottom = 916.0
custom_styles/panel = SubResource( 2 )
script = ExtResource( 7 )

[node name="Background" type="Panel" parent="SlaveDietModule"]
show_behind_parent = true
margin_right = 510.0
margin_bottom = 570.0
custom_styles/panel = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="SlaveDietModule"]
margin_left = 36.0
margin_top = 80.0
margin_right = 472.0
margin_bottom = 482.0
theme = ExtResource( 15 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="SlaveDietModule/ScrollContainer"]
margin_right = 436.0
size_flags_horizontal = 3

[node name="Button" type="Button" parent="SlaveDietModule/ScrollContainer/VBoxContainer"]
visible = false
margin_right = 436.0
margin_bottom = 45.0
theme = ExtResource( 3 )

[node name="Label" type="Label" parent="SlaveDietModule/ScrollContainer/VBoxContainer/Button"]
anchor_top = 0.18
anchor_right = 0.211
anchor_bottom = 0.5
margin_left = 18.2053
margin_top = -6.99472
margin_right = 110.459
margin_bottom = 13.1653
custom_colors/font_color = Color( 0.878431, 0.878431, 0.878431, 1 )
custom_fonts/font = ExtResource( 20 )
text = "Food Name"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="filter" type="Label" parent="SlaveDietModule/ScrollContainer/VBoxContainer/Button"]
margin_left = 320.848
margin_top = 2.66974
margin_right = 412.848
margin_bottom = 37.6697
custom_colors/font_color = Color( 0.878431, 0.878431, 0.878431, 1 )
custom_fonts/font = ExtResource( 20 )
text = "High"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="SlaveDietModule"]
margin_right = 504.0
margin_bottom = 78.0
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_fonts/font = SubResource( 3 )
text = "SIBLINGMODULEFOODFILTER"
align = 1
valign = 1
clip_text = true

[node name="ScrollContainer" type="ScrollContainer" parent="."]
light_mask = 0
margin_left = 10.4949
margin_top = 96.4983
margin_right = 298.495
margin_bottom = 313.498
theme = ExtResource( 8 )
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
light_mask = 0

[node name="Button" type="TextureRect" parent="ScrollContainer/VBoxContainer"]
visible = false
light_mask = 0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 50 )

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer/Button"]
light_mask = 0
margin_left = 12.4998
margin_top = 5.88629
margin_right = 175.5
margin_bottom = 40.8863
custom_colors/font_color = Color( 0.878431, 0.878431, 0.878431, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_as_outline = 1
custom_fonts/font = SubResource( 4 )
text = "Penetration"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProgressBar" type="TextureProgress" parent="ScrollContainer/VBoxContainer/Button"]
light_mask = 0
margin_left = 155.0
margin_top = 12.0
margin_right = 283.0
margin_bottom = 32.0
texture_over = ExtResource( 19 )
texture_progress = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer/Button/ProgressBar"]
light_mask = 0
margin_top = -2.0
margin_right = 128.0
margin_bottom = 22.0
custom_colors/font_color = Color( 0.878431, 0.878431, 0.878431, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_as_outline = 1
custom_fonts/font = SubResource( 5 )
text = "1/100"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ConsentLabel" type="Label" parent="."]
margin_left = 31.1127
margin_top = 301.228
margin_right = 269.113
margin_bottom = 333.228
text = "SIBLINGMODULECONSENT"
align = 1
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SexSkillsControl" type="Control" parent="."]
visible = false
light_mask = 0
margin_left = -0.979675
margin_top = 100.991
margin_right = 276.02
margin_bottom = 336.991
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VScrollBar" type="VScrollBar" parent="SexSkillsControl"]
visible = false
light_mask = 0
margin_left = 6.0
margin_right = 18.0
margin_bottom = 168.0
theme = ExtResource( 15 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SexSkillsLabel" type="Label" parent="."]
margin_left = 29.3008
margin_top = 16.8252
margin_right = 255.301
margin_bottom = 72.8252
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_fonts/font = SubResource( 3 )
text = "SIBLINGMODULESKILLSKILLS"
align = 1
valign = 1
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ConditionsLabel" type="Label" parent="."]
margin_left = 342.0
margin_top = 20.0
margin_right = 740.0
margin_bottom = 76.0
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_fonts/font = SubResource( 6 )
text = "SIBLINGMODULERULES"
align = 1
valign = 1
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="work_rules" type="GridContainer" parent="."]
margin_left = 325.0
margin_top = 86.8252
margin_right = 764.0
margin_bottom = 309.0
columns = 2

[node name="ration" type="CheckBox" parent="work_rules"]
margin_right = 215.0
margin_bottom = 48.0
custom_colors/font_color_disabled = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_colors/font_color_hover_pressed = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_colors/font_color_hover = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_colors/font_color_pressed = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_fonts/font = ExtResource( 20 )
custom_icons/checked_disabled = ExtResource( 9 )
custom_icons/checked = ExtResource( 17 )
custom_icons/unchecked = ExtResource( 9 )
custom_styles/focus = SubResource( 7 )
text = "Extra rations"

[node name="shifts" type="CheckBox" parent="work_rules"]
margin_left = 219.0
margin_right = 420.0
margin_bottom = 48.0
custom_colors/font_color_disabled = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_colors/font_color_hover_pressed = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_colors/font_color_hover = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_colors/font_color_pressed = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_fonts/font = ExtResource( 20 )
custom_icons/checked_disabled = ExtResource( 9 )
custom_icons/checked = ExtResource( 17 )
custom_icons/unchecked = ExtResource( 9 )
custom_styles/focus = SubResource( 8 )
text = "Longer shifts"

[node name="constrain" type="CheckBox" parent="work_rules"]
margin_top = 52.0
margin_right = 215.0
margin_bottom = 100.0
custom_colors/font_color_disabled = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_colors/font_color_hover_pressed = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_colors/font_color_hover = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_colors/font_color_pressed = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_fonts/font = ExtResource( 20 )
custom_icons/checked_disabled = ExtResource( 9 )
custom_icons/checked = ExtResource( 17 )
custom_icons/unchecked = ExtResource( 9 )
custom_styles/focus = SubResource( 9 )
text = "Coerced Labor"

[node name="luxury" type="CheckBox" parent="work_rules"]
margin_left = 219.0
margin_top = 52.0
margin_right = 420.0
margin_bottom = 100.0
custom_colors/font_color_disabled = Color( 0.996078, 0.317647, 0.364706, 1 )
custom_colors/font_color_hover_pressed = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_colors/font_color_hover = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_colors/font_color_pressed = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_fonts/font = ExtResource( 20 )
custom_icons/checked_disabled = ExtResource( 9 )
custom_icons/checked = ExtResource( 17 )
custom_icons/unchecked = ExtResource( 9 )
custom_styles/focus = SubResource( 9 )
text = "Luxury Room"

[node name="contraceptive" type="CheckBox" parent="work_rules"]
margin_top = 104.0
margin_right = 215.0
margin_bottom = 152.0
custom_colors/font_color_disabled = Color( 0.996078, 0.317647, 0.364706, 1 )
custom_colors/font_color_hover_pressed = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_colors/font_color_hover = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_colors/font_color_pressed = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_fonts/font = ExtResource( 20 )
custom_icons/checked_disabled = ExtResource( 9 )
custom_icons/checked = ExtResource( 17 )
custom_icons/unchecked = ExtResource( 9 )
custom_styles/focus = SubResource( 9 )
text = "Contraceptive"

[node name="nudity" type="CheckBox" parent="work_rules"]
margin_left = 219.0
margin_top = 104.0
margin_right = 420.0
margin_bottom = 152.0
custom_colors/font_color_disabled = Color( 0.996078, 0.317647, 0.364706, 1 )
custom_colors/font_color_hover_pressed = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_colors/font_color_hover = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_colors/font_color_pressed = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_fonts/font = ExtResource( 20 )
custom_icons/radio_checked_disabled = ExtResource( 17 )
custom_icons/radio_checked = ExtResource( 17 )
custom_icons/checked_disabled = ExtResource( 9 )
custom_icons/radio_unchecked_disabled = ExtResource( 9 )
custom_icons/checked = ExtResource( 17 )
custom_icons/radio_unchecked = ExtResource( 9 )
custom_icons/unchecked_disabled = ExtResource( 9 )
custom_icons/unchecked = ExtResource( 9 )
disabled = true
text = "Nudity"

[node name="food_love" type="TextureRect" parent="."]
light_mask = 0
margin_left = 319.386
margin_top = 862.997
margin_right = 354.386
margin_bottom = 897.997
rect_min_size = Vector2( 35, 35 )
size_flags_horizontal = 0
texture = ExtResource( 11 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="TextureRect" parent="food_love"]
visible = false
light_mask = 0
margin_left = 48.0
margin_right = 79.0
margin_bottom = 30.0

[node name="food_hate" type="TextureRect" parent="."]
light_mask = 0
margin_left = 414.876
margin_top = 863.746
margin_right = 449.876
margin_bottom = 898.746
rect_min_size = Vector2( 35, 35 )
size_flags_horizontal = 0
texture = ExtResource( 10 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Container" type="HBoxContainer" parent="food_hate"]
light_mask = 0
margin_left = 48.0
margin_right = 157.0
margin_bottom = 30.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="TextureRect" parent="food_hate/Container"]
visible = false
light_mask = 0
margin_right = 31.0
margin_bottom = 30.0

[node name="SexTraitsPanel" type="Panel" parent="."]
light_mask = 0
margin_left = 30.0
margin_top = 363.0
margin_right = 280.0
margin_bottom = 894.0
custom_styles/panel = ExtResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="SexTraitsPanel"]
light_mask = 0
margin_left = 18.126
margin_right = 210.126
margin_bottom = 42.0
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_fonts/font = SubResource( 3 )
text = "SIBLINGMODULESEXTRAITS"
align = 1
valign = 1
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="SexTraitsPanel"]
light_mask = 0
margin_left = 12.0
margin_top = 52.0
margin_right = 242.0
margin_bottom = 453.0
theme = ExtResource( 15 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="SexTraitsPanel/ScrollContainer"]
light_mask = 0
margin_right = 230.0
size_flags_horizontal = 3
custom_constants/separation = 5

[node name="Button" type="Button" parent="SexTraitsPanel/ScrollContainer/VBoxContainer"]
visible = false
light_mask = 0
margin_right = 230.0
margin_bottom = 55.0
theme = ExtResource( 16 )
disabled = true
toggle_mode = true
text = "Trait"

[node name="TraitHelp" type="TextureRect" parent="SexTraitsPanel"]
visible = false
light_mask = 0
margin_left = 596.57
margin_top = 0.481625
margin_right = 647.57
margin_bottom = 39.4816
texture = ExtResource( 18 )
expand = true
stretch_mode = 6

[node name="TraitCapacity" type="Label" parent="SexTraitsPanel"]
light_mask = 0
margin_left = -4.0
margin_top = 461.0
margin_right = 255.0
margin_bottom = 496.0
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_fonts/font = ExtResource( 20 )
text = "SIBLINGMODULETRAITCAPACITY"
align = 1
valign = 1
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RelativesPanel" type="Control" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 25 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="RelativesPanel"]
margin_left = 824.0
margin_top = 25.0
margin_right = 1663.0
margin_bottom = 100.0
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_fonts/font = ExtResource( 22 )
text = "SIBLINGMODULERELATIVES"
align = 1
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Relatives" type="HBoxContainer" parent="RelativesPanel"]
margin_left = 825.0
margin_top = 84.0
margin_right = 1660.0
margin_bottom = 894.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Parents" type="VBoxContainer" parent="RelativesPanel/Relatives"]
margin_right = 275.0
margin_bottom = 810.0
size_flags_horizontal = 3

[node name="Head" type="Label" parent="RelativesPanel/Relatives/Parents"]
margin_right = 275.0
margin_bottom = 44.0
custom_fonts/font = ExtResource( 23 )
text = "SIBLINGMODULEPARENTS"
align = 1
clip_text = true

[node name="panel" type="Control" parent="RelativesPanel/Relatives/Parents"]
visible = false
margin_top = 48.0
margin_right = 275.0
margin_bottom = 148.0
rect_min_size = Vector2( 0, 100 )

[node name="Icon" type="TextureRect" parent="RelativesPanel/Relatives/Parents/panel"]
margin_left = 20.0
margin_top = 20.0
margin_right = 80.0
margin_bottom = 80.0
texture = ExtResource( 24 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="name" type="Button" parent="RelativesPanel/Relatives/Parents/panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 117.0
theme = ExtResource( 26 )
text = "FULL NAME"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="RelativesPanel/Relatives"]
margin_left = 279.0
margin_right = 555.0
margin_bottom = 810.0
size_flags_horizontal = 3
scroll_horizontal_enabled = false

[node name="Siblings" type="VBoxContainer" parent="RelativesPanel/Relatives/ScrollContainer"]
margin_right = 276.0
margin_bottom = 44.0
size_flags_horizontal = 3

[node name="Head" type="Label" parent="RelativesPanel/Relatives/ScrollContainer/Siblings"]
margin_right = 276.0
margin_bottom = 44.0
custom_fonts/font = ExtResource( 23 )
text = "SIBLINGMODULESIBLINGS"
align = 1
clip_text = true

[node name="panel" type="Control" parent="RelativesPanel/Relatives/ScrollContainer/Siblings"]
visible = false
margin_top = 48.0
margin_right = 276.0
margin_bottom = 148.0
rect_min_size = Vector2( 0, 100 )

[node name="Icon" type="TextureRect" parent="RelativesPanel/Relatives/ScrollContainer/Siblings/panel"]
margin_left = 20.0
margin_top = 20.0
margin_right = 80.0
margin_bottom = 80.0
texture = ExtResource( 24 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="name" type="Button" parent="RelativesPanel/Relatives/ScrollContainer/Siblings/panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 117.0
theme = ExtResource( 26 )
text = "FULL NAME"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer2" type="ScrollContainer" parent="RelativesPanel/Relatives"]
margin_left = 559.0
margin_right = 835.0
margin_bottom = 810.0
size_flags_horizontal = 3
scroll_horizontal_enabled = false

[node name="Children" type="VBoxContainer" parent="RelativesPanel/Relatives/ScrollContainer2"]
margin_right = 276.0
margin_bottom = 44.0
size_flags_horizontal = 3

[node name="Head" type="Label" parent="RelativesPanel/Relatives/ScrollContainer2/Children"]
margin_right = 276.0
margin_bottom = 44.0
custom_fonts/font = ExtResource( 23 )
text = "SIBLINGMODULECHILDDREN"
align = 1
clip_text = true

[node name="panel" type="Control" parent="RelativesPanel/Relatives/ScrollContainer2/Children"]
visible = false
margin_top = 48.0
margin_right = 276.0
margin_bottom = 148.0
rect_min_size = Vector2( 0, 100 )

[node name="Icon" type="TextureRect" parent="RelativesPanel/Relatives/ScrollContainer2/Children/panel"]
margin_left = 20.0
margin_top = 20.0
margin_right = 80.0
margin_bottom = 80.0
texture = ExtResource( 24 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="name" type="Button" parent="RelativesPanel/Relatives/ScrollContainer2/Children/panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 117.0
theme = ExtResource( 26 )
text = "FULL NAME"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UpgradesPanel" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="TextureRect" type="TextureRect" parent="UpgradesPanel"]
margin_left = 891.238
margin_top = 101.301
margin_right = 1599.24
margin_bottom = 825.301
texture = ExtResource( 32 )

[node name="Label" type="Label" parent="UpgradesPanel"]
margin_left = 1432.0
margin_top = 848.0
margin_right = 1601.0
margin_bottom = 888.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 31 )
text = "100"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="UpgradesPanel"]
margin_left = 995.938
margin_top = 21.551
margin_right = 1498.94
margin_bottom = 75.551
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_fonts/font = ExtResource( 22 )
text = "SIBLINGMODULETRAININGS"
align = 1
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="UpgradesPanel"]
margin_left = 890.0
margin_top = 102.0
margin_right = 1639.0
margin_bottom = 826.0
theme = ExtResource( 15 )
scroll_horizontal_enabled = false

[node name="UpgradesList" parent="UpgradesPanel/ScrollContainer" instance=ExtResource( 27 )]

[node name="food_consumption" type="Label" parent="."]
margin_left = 542.0
margin_top = 860.0
margin_right = 809.0
margin_bottom = 892.0
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_fonts/font = SubResource( 10 )
text = "SIBLINGMODULEFOODCONSUMPTION"
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="food_consumption"]
margin_left = 231.0
margin_right = 271.0
margin_bottom = 35.0
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_fonts/font = SubResource( 11 )
text = "25"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SexSkillsTooltip" type="TextureRect" parent="."]
margin_left = 242.048
margin_top = 23.8112
margin_right = 292.048
margin_bottom = 70.8112
texture = ExtResource( 21 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ConditionsTooltip" type="TextureRect" parent="."]
margin_left = 736.642
margin_top = 26.2358
margin_right = 786.642
margin_bottom = 73.2358
texture = ExtResource( 21 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FoodFilterTooltip" type="TextureRect" parent="."]
margin_left = 757.831
margin_top = 362.086
margin_right = 807.831
margin_bottom = 409.086
texture = ExtResource( 21 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SexTraitsTooltip" type="TextureRect" parent="."]
margin_left = 246.11
margin_top = 362.086
margin_right = 296.11
margin_bottom = 409.086
texture = ExtResource( 21 )
expand = true
stretch_mode = 6

[node name="change_button" type="TextureButton" parent="."]
margin_left = 892.88
margin_top = 847.244
margin_right = 1022.88
margin_bottom = 887.244
texture_normal = ExtResource( 28 )
texture_pressed = ExtResource( 29 )
texture_hover = ExtResource( 30 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="change_button"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
text = "SIBLINGMODULERELATIVES"
align = 1
valign = 1
clip_text = true

[node name="change_button2" type="TextureButton" parent="."]
margin_left = 1086.51
margin_top = 847.135
margin_right = 1216.51
margin_bottom = 887.135
toggle_mode = true
texture_normal = ExtResource( 28 )
texture_pressed = ExtResource( 29 )
texture_hover = ExtResource( 30 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="change_button2"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
text = "SIBLINGMODULEMAIN"
align = 1
valign = 1
clip_text = true

[node name="change_button3" type="TextureButton" parent="."]
margin_left = 1246.51
margin_top = 847.135
margin_right = 1376.51
margin_bottom = 887.135
toggle_mode = true
texture_normal = ExtResource( 28 )
texture_pressed = ExtResource( 29 )
texture_hover = ExtResource( 30 )

[node name="Label" type="Label" parent="change_button3"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
text = "SIBLINGMODULESEX"
align = 1
valign = 1
clip_text = true
